examples/invalid/parsing/multipleVariant.ordinis
foo : 〈 foo : Int64, bar : Int64 〉
foo = 〈 foo = 0, bar = 42 〉
